--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 *
 * [Main Stylesheet]
 *
-* Theme    : Brilio
+* Theme    : Radu Lucian
 * Version  : 1.0
 * Author   : Themeland
 * Support  : hridoy1272@gmail.com
@@ -2923,7 +2923,7 @@ header {
 		align-items: baseline;
 
 		&.text-original {
-			animation: brilio-normal-text-marquee 20s linear infinite;
+			animation: Radu Lucian-normal-text-marquee 20s linear infinite;
 		}
 
 		&.text-copy {
@@ -2933,7 +2933,7 @@ header {
 			will-change: transform;
 			backface-visibility: hidden;
 			transform: translateX(100%) translateZ(0);
-			animation: brilio-normal-text-marquee-copy 20s linear infinite;
+			animation: Radu Lucian-normal-text-marquee-copy 20s linear infinite;
 		}
 	}
 
@@ -2964,7 +2964,7 @@ header {
 	}
 }
 
-@keyframes brilio-normal-text-marquee {
+@keyframes Radu Lucian-normal-text-marquee {
 	0% {
 		transform: translateX(0) translateZ(0);
 	}
@@ -2974,7 +2974,7 @@ header {
 	}
 }
 
-@keyframes brilio-normal-text-marquee-copy {
+@keyframes Radu Lucian-normal-text-marquee-copy {
 	0% {
 		transform: translateX(100%) translateZ(0);
 	}
@@ -3888,7 +3888,7 @@ footer {
 		}
 	}
 
-	#brilio-accordion {
+	#Radu Lucian-accordion {
 		.accordion-item {
 			color: var(--secondary-p-color);
 
@@ -4255,7 +4255,7 @@ span.page-numbers {
 	}
 }
 
-#brilio-accordion {
+#Radu Lucian-accordion {
 	.accordion-item {
 		background-color: transparent;
 		border: none;
