--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1545,6 +1545,10 @@ header .navbar-expand .dropdown:hover > .dropdown-menu {
   }
 }
 
+.auth{
+  height: 100vh;
+  min-height: fit-content;
+}
 .hero-section {
   position: relative;
   overflow: hidden;
