--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1549,6 +1549,19 @@ header .navbar-expand .dropdown:hover > .dropdown-menu {
   height: 100vh;
   min-height: fit-content;
 }
+.loading-overlay{
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+  background: white; 
+  z-index: 1000; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+}
+
 .hero-section {
   position: relative;
   overflow: hidden;
