--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -896,6 +896,7 @@ aside {
   overflow: hidden;
   color: #ffffff;
   z-index: 0;
+  gap: 0.5rem;
 }
 .btn.magnetic-button .icon {
   font-size: 1.5rem;
@@ -1658,10 +1659,12 @@ header .navbar-expand .dropdown:hover > .dropdown-menu {
 #btn-outline-mobile{}
 @media (max-width: 767px) {
   #btn-mobile{
-    padding: 1rem 2.75rem;
+    padding: 1rem 2rem;
+    gap: 0.5rem;
   }
   #btn-outline-mobile{
     padding: 0.5rem 2rem;
+    gap: 0.5rem;
   }
   .hero-section .hero-content .content .btn {
     padding: 1rem 2.75rem;
@@ -3683,6 +3686,10 @@ span.page-numbers:hover:not(.current) {
   margin: 5px 2.5px;
 }
 
+.spacer-24-mobile{
+  display: none;
+}
+
 /* #endregion Blog */
 /*----------------------------------------------
 11. All Media Queries
@@ -3753,6 +3760,40 @@ span.page-numbers:hover:not(.current) {
     margin: 0;
   }
   /* #endregion Header */
+
+  .btn{
+    font-size: 1rem;
+    line-height: 1.25rem;
+  }
+
+  .hero-section .hero-content .content .btn {
+    padding: 1 1.25rem;
+    font-size: 1rem;
+    line-height: 1.25rem;
+  }
+
+  .btn.magnetic-button {
+    font-family: var(--primary-font);
+    font-size: 1rem;
+    line-height: 1.25rem;
+    padding: 1 1.25rem;
+    gap: 0.5rem;
+    width: auto;
+  }
+  .btn.magnetic-button .icon {
+    font-size: 1.25rem;
+  }
+
+  .btn.btn-outline {
+    font-size: 1rem;
+    line-height: 1.25rem;
+    padding: 10 1.25rem;
+    gap: 0.5rem;
+    width: auto;
+  }
+  .btn.btn-outline .icon {
+    font-size: 1.25rem;
+  }
 }
 @media (max-width: 576px) {
   .service-content .title {
@@ -3780,6 +3821,11 @@ span.page-numbers:hover:not(.current) {
   }
   .offcanvas-wrapper .offcanvas .offcanvas-content hr {
     margin: 10px 0;
+  }
+  .spacer-24-mobile{
+    display: flex;
+    width: 100%;
+    height: 1.5rem;
   }
   /* #endregion Modal */
 }
