--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2975,7 +2975,7 @@ header {
 	}
 }
 
-@keyframes Radu Lucian-normal-text-marquee {
+@keyframes Radu-Lucian-normal-text-marquee {
 	0% {
 		transform: translateX(0) translateZ(0);
 	}
@@ -2985,7 +2985,7 @@ header {
 	}
 }
 
-@keyframes Radu Lucian-normal-text-marquee-copy {
+@keyframes Radu-Lucian-normal-text-marquee-copy {
 	0% {
 		transform: translateX(100%) translateZ(0);
 	}
